--- a/workdir/app-near/test/Makefile
+++ b/workdir/app-near/test/Makefile
@@ -1,5 +1,5 @@
 all: main
-main: main.c ../src/parse_transaction.c
+main: main.c ../src/*.c ../src/*.h
 		cc -o main -I ../src main.c ../src/parse_transaction.c
 test: main
 		./main
